--- a/package.json
+++ b/package.json
@@ -3,22 +3,45 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@heroui/accordion": "^2.2.8",
+    "@heroui/button": "^2.2.10",
+    "@heroui/card": "^2.2.10",
+    "@heroui/checkbox": "^2.3.9",
+    "@heroui/chip": "^2.2.7",
+    "@heroui/divider": "^2.2.6",
+    "@heroui/form": "^2.1.9",
+    "@heroui/image": "^2.2.6",
+    "@heroui/input": "^2.4.10",
+    "@heroui/link": "^2.2.8",
+    "@heroui/navbar": "^2.2.9",
+    "@heroui/skeleton": "^2.2.6",
+    "@heroui/spinner": "^2.2.7",
+    "@heroui/system": "^2.4.7",
+    "@heroui/theme": "^2.4.6",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.4.1",
+    "lucide-react": "^0.474.0",
+    "next": "15.1.6",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.6"
+    "snippet": "^0.1.0",
+    "swr": "^2.3.2",
+    "valibot": "^1.0.0-beta.15"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "typescript": "^5.7.3",
+    "@types/node": "^20.17.17",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17"
   }
 }
